force-app/main/default/objects/AH_Case_Flags_Store_Types__c/AH_Case_Flags_Store_Types__c.object-meta.xml
<CustomObject>
    <description>NICC-026092</description>
    <label>AH Case Flags Store Types</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AH Case Flags Store Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AH Case Flags Store Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>