force-app/main/default/objects/AH_Case_Flags_Store_Types__c/fields/Clear_Case_Origins__c.field-meta.xml
<CustomField>
    <fullName>Clear_Case_Origins__c</fullName>
    <description>NICC-026092</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clear Case Origins</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>