force-app/main/default/objects/AH_Case_Flags_Store_Types__c/fields/Enabled_Activity_Types__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Activity_Types__c</fullName>
    <description>NICC-026092</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enabled Activity Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>